support-frontend/cloud-formation/cfn.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: support-frontend
Parameters:
  VpcId:
    Type: String
    Description: VpcId of your existing Virtual Private Cloud (VPC)
    Default: vpc-e6e00183
  PrivateVpcSubnets:
    Description: Private subnets to use for EC2 instances
    Type: List<AWS::EC2::Subnet::Id>
  PublicVpcSubnets:
    Description: Public subnets to use for the ELB
    Type: List<AWS::EC2::Subnet::Id>
  Stack:
    Description: Applied directly as a tag
    Type: String
  Stage:
    Description: Applied directly as a tag
    Type: String
  App:
    Description: Applied directly as a tag
    Type: String
    Default: frontend
  AMI:
    Description: AMI ID (may be replaced by RiffRaff for latest baked AMI)
    Type: String
    Default: ami-0eb88168
  BastionSecurityGroup:
      Description: Bastion's security group for SSH
      Type: String

Conditions:
  CreateProdResources: !Equals [!Ref "Stage", "PROD"]
  CreateCodeResources: !Equals [!Ref "Stage", "CODE"]
Mappings:
  StageVariables:
    CODE:
      MaxInstances: 2
      MinInstances: 1
      InstanceType: t3.small
      CertificateARN: arn:aws:acm:eu-west-1:865473395570:certificate/44e9f40c-c884-40e6-a171-6769e9a8b173
      DynamoDBTables:
      - arn:aws:dynamodb:*:*:table/MembershipSub-Promotions-DEV
      - arn:aws:dynamodb:*:*:table/MembershipSub-Promotions-UAT
      RedemptionTables:
      - arn:aws:dynamodb:*:*:table/redemption-codes-DEV-PROD
      - arn:aws:dynamodb:*:*:table/redemption-codes-UAT-PROD
    PROD:
      MaxInstances: 6
      MinInstances: 3
      InsufficientInstances: 2
      InstanceType: t3.small
      CertificateARN: arn:aws:acm:eu-west-1:865473395570:certificate/9d8ff96c-63d5-425b-88d1-f529770e5b6d
      DynamoDBTables:
      - arn:aws:dynamodb:*:*:table/MembershipSub-Promotions-PROD
      - arn:aws:dynamodb:*:*:table/MembershipSub-Promotions-UAT
      RedemptionTables:
      - arn:aws:dynamodb:*:*:table/redemption-codes-UAT-PROD
      - arn:aws:dynamodb:*:*:table/redemption-codes-PROD-PROD
  Constants:
    Alarm:
      Process: Follow the process in https://docs.google.com/document/d/1_3El3cly9d7u_jPgTcRjLxmdG2e919zCLvmcFCLOYAk/edit
      Urgent: URGENT 9-5 -
Resources:
  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier: !Ref PrivateVpcSubnets
      LaunchConfigurationName: !Ref LaunchConfig
      MinSize: !FindInMap [ StageVariables, !Ref Stage, MinInstances ]
      MaxSize: !FindInMap [ StageVariables, !Ref Stage, MaxInstances ]
      TargetGroupARNs:
        - !Ref TargetGroup
      HealthCheckType: ELB
      HealthCheckGracePeriod: 300
      Tags:
        - Key: Stack
          Value: !Ref Stack
          PropagateAtLaunch: true
        - Key: App
          Value: !Ref App
          PropagateAtLaunch: true
        - Key: Stage
          Value: !Ref Stage
          PropagateAtLaunch: true
  LaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref AMI
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      InstanceType: !FindInMap [ StageVariables, !Ref Stage, InstanceType ]
      IamInstanceProfile: !Ref InstanceProfile
      AssociatePublicIpAddress: false
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -ev
          mkdir /etc/gu
          aws --region ${AWS::Region} s3 cp s3://membership-dist/${Stack}/${Stage}/${App}/support-frontend_1.0-SNAPSHOT_all.deb /tmp
          dpkg -i /tmp/support-frontend_1.0-SNAPSHOT_all.deb
          /opt/cloudwatch-logs/configure-logs application ${Stack} ${Stage} ${App} /var/log/support-frontend/application.log '%Y-%m-%dT%H:%M:%S,%f%z'
  AppRole:
    Type: AWS::IAM::Role
    Properties:
      Path: "/"
      ManagedPolicyArns:
      - !Sub arn:aws:iam::${AWS::AccountId}:policy/guardian-ec2-role-for-ssm
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Policies:
        - PolicyName: PrivateBucket
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: s3:GetObject
                Resource:
                - !Sub arn:aws:s3:::gu-zuora-catalog/PROD/Zuora-PROD/catalog.json
                - !Sub arn:aws:s3:::gu-zuora-catalog/PROD/Zuora-UAT/catalog.json
                - !Sub arn:aws:s3:::gu-zuora-catalog/PROD/Zuora-DEV/catalog.json
        - PolicyName: SettingsBucket
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: s3:GetObject
                Resource:
                  - !Sub arn:aws:s3:::support-admin-console/${Stage}/*
        - PolicyName: UpdateSSHKeys
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: s3:GetObject
                Resource: arn:aws:s3:::github-public-keys/Membership-and-Subscriptions/*
        - PolicyName: SSMGet
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: ssm:GetParametersByPath
                Resource: !Sub arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${Stack}/${App}/${Stage}
        - PolicyName: DescribeASG
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                - autoscaling:DescribeAutoScalingInstances
                - autoscaling:DescribeAutoScalingGroups
                - ec2:DescribeTags
                Resource: '*'
        - PolicyName: CloudwatchLogs
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: cloudwatch:PutMetricData
                Resource: '*'
        - PolicyName: CloudwatchMetrics
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                - logs:CreateLogGroup
                - logs:CreateLogStream
                - logs:PutLogEvents
                - logs:DescribeLogStreams
                Resource: arn:aws:logs:*:*:*
        - PolicyName: StateMachines
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                - states:ListStateMachines
                - states:StartExecution
                - states:GetExecutionHistory
                - states:DescribeStateMachine
                Resource: arn:aws:states:*:*:*
        - PolicyName: DynamoPromotions
          PolicyDocument:
            Statement:
            - Effect: Allow
              Action:
              - dynamodb:GetItem
              - dynamodb:Scan
              - dynamodb:Query
              - dynamodb:DescribeTable
              Resource: !FindInMap [StageVariables, !Ref Stage, DynamoDBTables]
        - PolicyName: DynamoRedemptions
          PolicyDocument:
            Statement:
            - Effect: Allow
              Action:
              - dynamodb:GetItem
              Resource: !FindInMap [StageVariables, !Ref Stage, RedemptionTables]
        - PolicyName: StripeSetupIntentLambda
          PolicyDocument:
            Version: 2012-10-17
            Statement:
            - Effect: Allow
              Action:
                - lambda:InvokeFunction
              Resource: !Sub arn:aws:lambda:eu-west-1:${AWS::AccountId}:function:stripe-intent-${Stage}
  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - !Ref AppRole

  ElasticLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${Stack}-${Stage}-${App}
      Subnets: !Ref PublicVpcSubnets
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Tags:
        - Key: Stack
          Value: !Ref Stack
        - Key: App
          Value: !Ref App
        - Key: Stage
          Value: !Ref Stage

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: TargetGroup
      LoadBalancerArn:
        Ref: ElasticLoadBalancer
      Certificates:
        - CertificateArn: !FindInMap [ StageVariables, !Ref Stage, CertificateARN ]
      Port: 443
      Protocol: HTTPS

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub ${Stack}-${Stage}-${App}
      Port: 9000
      Protocol: HTTP
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /healthcheck
      HealthCheckPort: 9000
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      VpcId: !Ref VpcId
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: '20'
    DependsOn:
    - ElasticLoadBalancer

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Permit incoming HTTPS access on port 443, egress to port 9000
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 9000
          ToPort: 9000
          CidrIp: 0.0.0.0/0

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open up SSH access and enable HTTP access on the configured port
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroup
        - IpProtocol: tcp
          FromPort: 9000
          ToPort: 9000
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  NoHealthyInstancesAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: CreateProdResources
    Properties:
      AlarmActions:
      - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:reader-revenue-dev
      AlarmName: !Join
        - ' '
        - - !FindInMap [ Constants, Alarm, Urgent ]
          - !Ref 'Stage'
          - 'no healthy instances for support-frontend'
      AlarmDescription: !Join
        - ' '
        - - 'Impact - Cannot sell any subscriptions or contributions products.'
          - !FindInMap [ Constants, Alarm, Process ]
      MetricName: HealthyHostCount
      Namespace: AWS/ApplicationELB
      Dimensions:
        - Name: LoadBalancer
          Value: !GetAtt ElasticLoadBalancer.LoadBalancerFullName
        - Name: TargetGroup
          Value: !GetAtt TargetGroup.TargetGroupFullName
      ComparisonOperator: LessThanOrEqualToThreshold
      Threshold: 0.5
      Period: 60
      EvaluationPeriods: 2
      Statistic: Average
    DependsOn:
      - TargetGroup
      - ElasticLoadBalancer

  ReducedHealthyInstancesAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: CreateProdResources
    Properties:
      AlarmActions:
        - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:reader-revenue-dev
      AlarmName: !Join
        - ' '
        - - !FindInMap [ Constants, Alarm, Urgent ]
          - !Ref 'Stage'
          - 'Reduced number of healthy instances for support-frontend'
      AlarmDescription: !Join
        - ' '
        - - 'Impact - Imminent issue cannot sell any subscriptions or contributions products.'
          - !FindInMap [ Constants, Alarm, Process ]
      MetricName: HealthyHostCount
      Namespace: AWS/ApplicationELB
      Dimensions:
        - Name: LoadBalancer
          Value: !GetAtt ElasticLoadBalancer.LoadBalancerFullName
        - Name: TargetGroup
          Value: !GetAtt TargetGroup.TargetGroupFullName
      ComparisonOperator: LessThanOrEqualToThreshold
      Threshold: !FindInMap [ StageVariables, !Ref Stage, InsufficientInstances ]
      Period: 300
      EvaluationPeriods: 2
      Statistic: Average
    DependsOn:
      - TargetGroup
      - ElasticLoadBalancer

  High5XXRateAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: CreateProdResources
    Properties:
      AlarmActions:
      - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:reader-revenue-dev
      AlarmName: !Join
        - ' '
        - - !FindInMap [ Constants, Alarm, Urgent ]
          - !Ref 'Stage'
          - 'support-frontend instances are returning 5XX errors'
      AlarmDescription: !Join
        - ' '
        - - 'Impact - Some or all actions on support website are failing.'
          - !FindInMap [ Constants, Alarm, Process ]
      MetricName: HTTPCode_Target_5XX_Count
      Namespace: AWS/ApplicationELB
      Dimensions:
        - Name: LoadBalancer
          Value: !GetAtt ElasticLoadBalancer.LoadBalancerFullName
        - Name: TargetGroup
          Value: !GetAtt TargetGroup.TargetGroupFullName
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Threshold: 3
      Period: 60
      EvaluationPeriods: 2
      Statistic: Sum
    DependsOn:
    - TargetGroup
    - ElasticLoadBalancer

  HighELB5XXRateAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: CreateProdResources
    Properties:
      AlarmActions:
        - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:reader-revenue-dev
      AlarmName: !Join
        - ' '
        - - !FindInMap [ Constants, Alarm, Urgent ]
          - !Ref 'Stage'
          - 'support-frontend ELB is returning 5XX errors'
      AlarmDescription: !Join
        - ' '
        - - 'Impact - Some or all actions on support website are failing.'
          - !FindInMap [ Constants, Alarm, Process ]
      MetricName: HTTPCode_ELB_5XX_Count
      Namespace: AWS/ApplicationELB
      Dimensions:
        - Name: LoadBalancer
          Value: !GetAtt ElasticLoadBalancer.LoadBalancerFullName
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Threshold: 3
      Period: 60
      EvaluationPeriods: 2
      Statistic: Sum
    DependsOn:
      - TargetGroup
      - ElasticLoadBalancer

  LatencyNotificationAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: CreateProdResources
    Properties:
      AlarmActions:
        - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:reader-revenue-dev
      AlarmName: !Join
        - ' '
        - - !FindInMap [ Constants, Alarm, Urgent ]
          - !Ref 'Stage'
          - 'support-frontend has high latency'
      AlarmDescription: !Join
        - ' '
        - - 'Impact - support-frontend users are seeing slow responses.'
          - !FindInMap [ Constants, Alarm, Process ]
      MetricName: TargetResponseTime
      Dimensions:
        - Name: LoadBalancer
          Value: !GetAtt ElasticLoadBalancer.LoadBalancerFullName
        - Name: TargetGroup
          Value: !GetAtt TargetGroup.TargetGroupFullName
      Namespace: AWS/ApplicationELB
      EvaluationPeriods: 2
      Period: 60
      Statistic: Average
      Threshold: 1
      ComparisonOperator: GreaterThanOrEqualToThreshold

  CatalogLoadingFailureAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: CreateProdResources
    Properties:
      AlarmActions:
        - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:reader-revenue-dev
      AlarmName: !Join
        - ' '
        - - !FindInMap [ Constants, Alarm, Urgent ]
          - !Ref 'Stage'
          - 'support-frontend could not load the Zuora catalog from S3'
      AlarmDescription: !Join
        - ' '
        - - 'Impact - Cannot sell any subscriptions products.'
          - !FindInMap [ Constants, Alarm, Process ]
      MetricName: CatalogLoadingFailure
      Namespace: support-frontend
      Dimensions:
        - Name: Environment
          Value: PROD
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Threshold: 1
      Period: 60
      EvaluationPeriods: 1
      Statistic: Average

  StateMachineUnavailableMetric:
    Type: "AWS::Logs::MetricFilter"
    Properties:
      LogGroupName: !Sub support-frontend-${Stage}
      FilterPattern: "\"regular-contributions-state-machine-unavailable\""
      MetricTransformations:
      - MetricNamespace: !Sub support-frontend-${Stage}
        MetricName: state-machine-unavailable
        MetricValue: 1

  StateMachineUnavailableAlarm:
    Type: AWS::CloudWatch::Alarm
    Condition: CreateProdResources
    Properties:
      AlarmActions:
      - !Sub arn:aws:sns:${AWS::Region}:${AWS::AccountId}:reader-revenue-dev
      AlarmName: !Join
        - ' '
        - - !FindInMap [ Constants, Alarm, Urgent ]
          - !Ref 'Stage'
          - 'support-workers state machine unavailable'
      AlarmDescription: !Join
        - ' '
        - - 'Impact - Cannot sell any subscriptions or contributions products.'
          - !FindInMap [ Constants, Alarm, Process ]
      MetricName: state-machine-unavailable
      Namespace: !Sub support-frontend-${Stage}
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Threshold: 1
      Period: 60
      EvaluationPeriods: 2
      Statistic: Sum
      TreatMissingData: notBreaching
    DependsOn:
    - StateMachineUnavailableMetric
